# llama-vector

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py
docs/: api.md  examples.md  index.md  installation.md  usage.md
docs/api/: index.md
llama_vector/: __init__.py  main.py  utils.py
src/llama_vector/: config.py  embedding.py  index.py  quality.py  query.py  vector_store.py
tests/: test_main.py  test_vector_store.py
