[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama_vector"
version = "0.1.0"
description = "Basic Python library for in-memory vector storage and similarity search."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
authors = [
    {name = "LlamaSearch AI Team", email = "team@llamasearch.ai"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
keywords=["vector", "embedding", "similarity search", "vector database"]
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "mypy>=1.2.0",
    "ruff>=0.1.0",
]
docs = [
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.1.6",
    "mkdocstrings[python]>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/llamasearchai/llama-vector"
Repository = "https://github.com/llamasearchai/llama-vector"
Issues = "https://github.com/llamasearchai/llama-vector/issues"
Documentation = "https://github.com/llamasearchai/llama-vector#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/llama_vector"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "C4",
    "B",
    "UP",
    "NPY",
    "PTH",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "NPY002",
]
isort = { known-first-party = ["llama_vector"] }
unfixable = ["B"]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"

[tool.mypy]
python_version = "3.8"
warnings = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-rXs --strict-config --strict-markers --cov=src/llama_vector --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
python_files = "test_*.py"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src/llama_vector"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\."
] 